--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,226 +1,230 @@
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
 }
 
-*, *:before, *:after{
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-body{
-    background-color: beige;
+body {
+  background-color: beige;
 }
-.navs{
-    display: flex;
-    justify-content: flex-end;
-    
+.navs {
+  display: flex;
+  justify-content: flex-end;
 }
-.contenedor{
-    max-width: 1100px;
-    margin: 0 auto;
+.contenedor {
+  max-width: 1100px;
+  margin: 0 auto;
 }
-.barra{
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    align-items: center;
+.barra {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  align-items: center;
 }
-.bg-amarillo{
-    background-color: #fac528;
-}
-
-.bg-azul{
-    background-color: teal;
-}
-.sombra{
-    -webkit-box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
+.bg-amarillo {
+  background-color: #fac528;
 }
 
-h1, h2{
-    text-align: center;
-    margin: 0;
+.bg-azul {
+  background-color: teal;
+}
+.sombra {
+  -webkit-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.75);
 }
 
-.contenedor-barra{
-    background-color: rgb(156, 10, 69);
+h1,
+h2 {
+  text-align: center;
+  margin: 0;
 }
 
-h1{
-    padding: 20px;
-    color: white;
+.contenedor-barra {
+  background-color: rgb(156, 10, 69);
 }
 
-h2{
-    font-size: 2rem;
+h1 {
+  padding: 20px;
+  color: white;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 /*Formulario*/
 
-form{
-    padding: 3rem;
-    margin-top: 2rem;
+form {
+  padding: 3rem;
+  margin-top: 2rem;
 }
 
-legend{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
-    text-align: center;
+legend {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  text-align: center;
 }
 
-legend span{
-    font-size: 1rem;
-    margin-top: 1rem;
-    clear: both;
-    display: block;
+legend span {
+  font-size: 1rem;
+  margin-top: 1rem;
+  clear: both;
+  display: block;
 }
 
-.campos{
-    display: flex;
-    justify-content: space-between;
+.campos {
+  display: flex;
+  justify-content: space-between;
 }
 
-.campo{
-    flex: 0 0 calc(33.3% -1rem);
-    padding: .5rem 0;
+.campo {
+  flex: 0 0 calc(33.3% -1rem);
+  padding: 0.5rem 0;
 }
 
-.campo label{
-    font-size: 1.2rem;
+.campo label {
+  font-size: 1.2rem;
 }
 
 .campo input[type="text"],
 .campo input[type="number"],
-.campo select{
-    width: 90%;
-    border: none;
-    padding: .5rem;
-    height: 3rem;
-    margin-top: .5rem;
-    font-size: 1rem;
+.campo select {
+  width: 90%;
+  border: none;
+  padding: 0.5rem;
+  height: 3rem;
+  margin-top: 0.5rem;
+  font-size: 1rem;
 }
 
-.enviar{
-    display: flex;
-    justify-content: flex-end;
+.enviar {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.campo input[type="submit"]{
-    background-color: rgb(156, 10, 69);
-    border: none;
-    color: white;
-    padding: 1rem 3rem;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    
+.campo input[type="submit"] {
+  background-color: rgb(156, 10, 69);
+  border: none;
+  color: white;
+  padding: 1rem 3rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
 }
 
-.campo input[type="submit"]:hover{
-    background-color: rgb(172, 4, 116);
+.campo input[type="submit"]:hover {
+  background-color: rgb(172, 4, 116);
 }
 
-.datos{
-    padding: 2rem;
-    margin-top: 3rem;
+.datos {
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
-.contenedor-datos{
-    max-width: 800px;
-    margin: 4rem auto 0 auto;
+.contenedor-datos {
+  max-width: 800px;
+  margin: 4rem auto 0 auto;
 }
 
-.buscador{
-    width: 100%;
-    height: 4rem;
-    padding: 1rem;
-    border: 1px solid;
-    margin: 2rem 0;
+.buscador {
+  width: 100%;
+  height: 4rem;
+  padding: 1rem;
+  border: 1px solid;
+  margin: 2rem 0;
 }
 
-.listado-costos{
-    width: 100%;
-    margin-top: 1rem;
-    border-collapse: collapse;
+.listado-costos {
+  width: 100%;
+  margin-top: 1rem;
+  border-collapse: collapse;
 }
 
-.total-gastos{
-    margin: 2rem 0;
-    text-align: center;
-    font-size: 2rem;
+.total-gastos {
+  margin: 2rem 0;
+  text-align: center;
+  font-size: 2rem;
 }
-.total-gastos span{
-    font-size: 3rem;
-    font-weight: 900;
-}
-
-.listado-costos thead{
-    background-color:rgb(172, 4, 116);
-    text-transform: uppercase;
+.total-gastos span {
+  font-size: 3rem;
+  font-weight: 900;
 }
 
-.listado-costos thead  th{
-    padding: 1rem 0;
+.listado-costos thead {
+  background-color: rgb(172, 4, 116);
+  text-transform: uppercase;
 }
 
-.listado-costos tbody td{
-    padding: .5rem;
-    text-align: center;
-    border: 2px rgb(99, 207, 221) solid;
+.listado-costos thead th {
+  padding: 1rem 0;
 }
 
-.listado-costos button{
-    background-color: transparent!important;
-    border: none;
+.listado-costos tbody td {
+  padding: 0.5rem;
+  text-align: center;
+  border: 2px rgb(99, 207, 221) solid;
 }
 
-.btn{
-    font-size: 2rem;
-    text-decoration: none;
+.listado-costos button {
+  background-color: transparent !important;
+  border: none;
 }
 
-.btn-editar{
-    color: rgb(0, 0, 0);
+.btn {
+  font-size: 2rem;
+  text-decoration: none;
 }
 
-.btn-borrar{
-    color:red;
-}
-.volver{
-   background-color: rgb(243, 247, 28);
-    border-radius: 10px;
-    text-align: center;
-    color: black;
-    font-weight: 700;
-    font-size: 1.2rem;
-    padding: .5rem;
+.btn-editar {
+  color: rgb(0, 0, 0);
 }
 
-.notificacion{
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
-    padding: 1rem 3rem;
-    opacity: 0;
+.btn-borrar {
+  color: red;
+}
+.volver {
+  background-color: rgb(243, 247, 28);
+  border-radius: 10px;
+  text-align: center;
+  color: black;
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding: 0.5rem;
 }
 
-.visible{
-    opacity: 1;
+.notificacion {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  padding: 1rem 3rem;
+  opacity: 0;
 }
 
-.error{
-    background-color: rgb(238,148,166);
-    color: red;
+.visible {
+  opacity: 1;
 }
 
-.navegacion a{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-size: 23px;
-    margin-right: 20px;
+.error {
+  background-color: rgb(238, 148, 166);
+  color: red;
 }
 
-.buscador{
-    width: 100%;
-    height: 4rem;
-    padding: 1rem;
+.navegacion a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 23px;
+  margin-right: 20px;
 }
 
+.buscador {
+  width: 100%;
+  height: 4rem;
+  padding: 1rem;
+}
+
+th {
+  text-align: center;
+}
